--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -1,2 +1,2 @@
-token: 'MTEzNTY5OTI0Njk1MjIzOTE2NA.GrpEhC.eQB5AuQlDVCdefl4mmgvwhZf02oGixeefZLVu8'
-youtube-api-token: "AIzaSyDfu7E9dvs71M1JAV8MOOFZg6tUuJqpKhk"
+token: ''
+youtube-api-token: ""
